2010-02-09	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/lib/pf/SNMP.pm, pf/sbin/pfsetvlan: When a 'UP' trap is received
	PacketFence will try to get the MAC address 30 times or for 2 minutes 
	whichever condition is first met. Fixes #903;
	http://www.packetfence.org/mantis/view.php?id=903
	
	This prevent the following condition: telnet timeouts take three 
	minutes for the thread to recover so 30 times 3 minutes would hang a 
	thread (and the switch) for 90 minutes. Now since it's longer than the 2
	minutes limit, it only hang it for 3 minutes.

	* pf/lib/pf/web.pm: In web_node_record_user_agent call node_modify() 
	directly instead of pfcmd node edit. It's more performant (avoids 
	spawning a shell) and it'll avoid trying to adjust vlan. Fixes #908;
	http://www.packetfence.org/mantis/view.php?id=908

	* pf/sbin/pfsetvlan: Created an ALRM signal handler that report an
	error and does nothing else. This is a workaround to prevent pfsetvlan
	to crash when a Net::Telnet or a Net::Appliance::Session call times out,
	sending a SIGALRM. Fixes #907;
	http://www.packetfence.org/mantis/view.php?id=907 

	Upstream bug: https://rt.cpan.org/Public/Bug/Display.html?id=54415

	Local bug to track upstream: 
	http://www.packetfence.org/mantis/view.php?id=902

2010-02-02	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/configuration/interfaces_add.php, 
	pf/html/admin/configuration/interfaces_edit.php,
	pf/html/admin/configuration/networks_add.php,
	pf/html/admin/configuration/networks_edit.php,
	pf/html/admin/configuration/switches_add.php, 
	pf/html/admin/configuration/switches_edit.php,
	pf/html/admin/configuration/violation_add.php, 
	pf/html/admin/configuration/violation_edit.php, 
	pf/html/admin/node/edit.php, pf/html/admin/person/edit.php, 
	pf/html/admin/scan/edit.php, pf/html/admin/violation/edit.php: Errors
	are now shown in Web admin's popups instead of automatically closing 
	the popups without checking return status. Fixes #899;