@@ -7,6 +7,12 @@ Notes on upgrading from an older release
 
 o Upgrading from a version prior to <release>:
 
+    - lib/pf/vlan.pm interface changed
+    If you built a customized version of vlan.pm in lib/pf/vlan/custom.pm be 
+    aware that the parameters expected by vlan_determine_for_node() and 
+    custom_getCorrectVlan() changed. Instead of the switch's IP, a switch 
+    object (pf::SNMP) is expected.
+
     - Backup script archives locationlog_history records older than a year
     Archives are an SQL dump of the records placed in /root/backup/ by default 
     and never deleted. It will run the first day of each month.
