@@ -67,6 +67,7 @@ use lib INSTALL_DIR . "/lib";
 use pf::config;
 use pf::util;
 use pf::pfcmd;
+use pf::SwitchFactory;
 
 
 delete @ENV{qw(IFS CDPATH ENV BASH_ENV)};
@@ -2563,10 +2564,16 @@ sub generate_switchport_vlan_assignment {
             $logger->info(
                 "$mac is currentlog connected at $switch_ip ifIndex $ifIndex in VLAN $currentVlan"
             );
+
             my $vlan_obj = new pf::vlan::custom();
-            my $newCorrectVlan
-                = $vlan_obj->vlan_determine_for_node( $mac, $switch_ip,
-                $ifIndex );
+            my $switchFactory = new pf::SwitchFactory(-configFile => "$conf_dir/switches.conf");
+            my $switch = $switchFactory->instantiate($switch_ip);
+            if (!$switch) {
+                $logger->error("Can not instantiate switch $switch_ip ! Won't change VLAN");
+                return 0;
+            }
+
+            my $newCorrectVlan = $vlan_obj->vlan_determine_for_node($mac, $switch, $ifIndex);
             if ( $newCorrectVlan eq "-1" ) {
                 $logger->error("unable to determine correct VLAN for $mac");
             } else {
