@@ -1090,12 +1090,8 @@ sub handleTrap {
                 {
                     if ( $locationlog[0]->{'mac'} =~ /^$mac$/i ) {
                         if (( $locationlog[0]->{'vlan'} == $vlan )
-                            && ($vlan == $vlan_obj->vlan_determine_for_node(
-                                    $mac, $switch->{_ip}, $switch_port
-                                )
-                            )
-                            )
-                        {
+                            && ($vlan == $vlan_obj->vlan_determine_for_node($mac, $switch, $switch_port))
+                           ) {
                             $logger->info(
                                 "locationlog is already up2date. Do nothing");
                         } else {
@@ -1267,7 +1263,7 @@ sub handleTrap {
                 $logger->debug("$oldPC has still open locationlog entry at $switch_ip ifIndex $switch_port. Closing it");
                 locationlog_update_end_mac($oldPC);
                 $logger->info("authorizing $trapMac (old entry $oldPC) at new location $switch_ip ifIndex $switch_port");
-                my $correctVlanForThisNode = $vlan_obj->vlan_determine_for_node( $trapMac, $switch->{_ip}, $switch_port );
+                my $correctVlanForThisNode = $vlan_obj->vlan_determine_for_node($trapMac, $switch, $switch_port);
                 $switch->authorizeMAC( $switch_port, $oldPC, $trapMac, $switch->getVlan($switch_port), $correctVlanForThisNode );
 
                 #set the right VLAN
@@ -1292,9 +1288,7 @@ sub handleTrap {
                         $old_mac_to_remove = $old_mac;
                     }
                 }
-                my $correctVlanForThisNode
-                    = $vlan_obj->vlan_determine_for_node( $trapMac,
-                    $switch->{_ip}, $switch_port );
+                my $correctVlanForThisNode = $vlan_obj->vlan_determine_for_node($trapMac, $switch, $switch_port);
                 if ( defined($old_mac_to_remove) ) {
                     $logger->info(
                         "authorizing $trapMac (old entry $old_mac_to_remove) at new location $switch_ip ifIndex $switch_port"
@@ -1853,7 +1847,7 @@ sub node_determine_and_set_into_VLAN {
 
     $switch->setVlan(
         $ifIndex,
-        $vlan_obj->vlan_determine_for_node( $mac, $switch->{_ip}, $ifIndex ),
+        $vlan_obj->vlan_determine_for_node($mac, $switch, $ifIndex),
         \%switch_locker,
         $mac
     );
