@@ -33,7 +33,7 @@ New Features
 - Install guide more accurate
 
 Bug fixes
-- Performance fixes (#908)
+- Performance fixes (#908, #910)
 - Captive portal stability fixes (#892)
 - Improved error reporting in the web administration panel and cli (#898, #899)
 - Mitigated Net::Telnet problems with perl threads (#903, #907)
