@@ -1,4 +1,10 @@
 2010-02-09	Olivier Bilodeau <obilodeau@inverse.ca>
+	* pf/addons/recovery.pl, pf/bin/pfcmd, pf/lib/pf/vlan.pm, 
+	pf/sbin/pfsetvlan, pf/UPGRADE: Avoid loading the entire SwitchFactory 
+	at several spots in vlan.pm by passing the switch object around instead 
+	of the switch's IP. Improves performance. Fixes #910;
+	http://www.packetfence.org/mantis/view.php?id=910
+
 	* pf/lib/pf/SNMP.pm, pf/sbin/pfsetvlan: When a 'UP' trap is received
 	PacketFence will try to get the MAC address 30 times or for 2 minutes 
 	whichever condition is first met. Fixes #903;
